force-app/main/default/objects/Soft_Drink_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Soft Drink Orders</relationshipLabel>
    <relationshipName>Soft_Drink_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>