force-app/main/default/objects/Soft_Drink_Order__c/fields/Soft_Drink__c.field-meta.xml
<CustomField>
    <fullName>Soft_Drink__c</fullName>
    <label>Soft Drink</label>
    <referenceTo>Soft_Drink__c</referenceTo>
    <relationshipLabel>Soft Drink Orders</relationshipLabel>
    <relationshipName>Soft_Drink_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>